--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,60 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/asm.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/asm-attrs.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/c3p0-0.9.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/cglib-2.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/cglib-nodep-2.1_3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/com.springsource.net.sf.cglib-2.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/com.springsource.org.aopalliance-1.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/com.springsource.org.apache.commons.fileupload-1.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/com.springsource.org.apache.commons.httpclient-3.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/com.springsource.org.apache.commons.logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/com.springsource.org.apache.log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/com.springsource.org.aspectj.weaver-1.6.8.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/com.springsource.org.codehaus.jackson.mapper-1.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/commons-collections.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/commons-collections-2.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/ehcache-1.2.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/ejb3-persistence.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/hibernate3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/hibernate-annotations.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/hibernate-commons-annotations.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/hibernate-validator.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/jdbc2_0-stdext.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/jmxtools-1.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/jta.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/log4j-1.2.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/mysql-connector-java-commercial-5.1.39-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.aop-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.asm-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.aspects-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.beans-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.context-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.core-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.expression-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.instrument.tomcat-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.instrument-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.oxm-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.web.portlet-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.web.servlet-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.web.struts-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/org.springframework.web-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/slf4j-api-1.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/slf4j-log4j12-1.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/spring-beans.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/spring-context.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/spring-context-support.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/spring-core.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/spring-jdbc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/spring-orm.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/spring-tx.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/SchoolPortal/WebContent/WEB-INF/lib/xerces-2.6.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
